--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<div class="background">
     <div class="header">
         <div class="logo">Header Logo</div>
         <a href="header-one">header link one</a>
@@ -26,8 +27,36 @@
         </div>
         <div class="image">this is a placeholder for an image</div>
     </div>
+</div>
 
+<div class="information">Some random information.</div>
+<div class="bigcont">
+<div class="container">
+    <div class="border"></div>
+    <div class="textinfo">this is some subtext under an illustration or image</div>
+</div>    
+<div class="container">
+    <div class="border"></div>
+    <div class="textinfo">this is some subtext under an illustration or image</div>
+</div>    <div class="container">
+    <div class="border"></div>
+    <div class="textinfo">this is some subtext under an illustration or image</div>
+</div>    <div class="container">
+    <div class="border"></div>
+    <div class="textinfo">this is some subtext under an illustration or image</div>
+</div>
+</div>
+<div class="quote">This is an inspiring quote, or a testimonial from a customer.
+     Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+     All I know is that it looks nice.<p class="author">-Thor, God of Thunder</p> </div>
 
-    
+<div class="end">
+    <div class="contend">
+        <div class="contend-left">
+            <div class="headline">Call to action! It's time!</div>
+            <p class="text">Sign up for our product by clicking that button right over there!</p></div>
+        <button class="buttonend">Sign up</button>
+    </div>
+</div>
 </body>
 </html>
